Change drinks project to voting project

--- a/index.html
+++ b/index.html
@@ -9,28 +9,34 @@
 </head>
 <body>
   <div class="container">
-    <div id="drinks">
-      <h1>Drink menu</h1>
-
-      <h2>Beer</h2>
+    <div id="votes">
+      <h1>Candidates</h1>
+      <hr>
+      <h2>Democrats</h2>
+      
       <ul>
-        <li>The King of Beer</li>
-        <li>The Queen of Beer</li>
-        <li>Real cold beer</li>
+        <li>Joe Shmoe</li>
+        <li>Bob Confused</li>
+        <li>Pet Rock</li>
       </ul>
-
-      <h2>Wine</h2>
+      <hr>
+      <h2>Republicans</h2>
       <ul>
-        <li>Red wine</li>
-        <li>White wine</li>
-        <li>Blue wine</li>
+        <li>Fred Flintstone</li>
+        <li>Scooby Doo</li>
+        <li>The color red</li>
       </ul>
     </div>
 
-    <div id="under-21">
-      <h1>Sorry, we can't serve you.</h1>
+    <h2>
+      <p><a href="https://europa.eu/youreurope/citizens/residence/elections-abroad/european-elections/index_en.htm">Click here to register to vote.</a></p>
+    </h2>
 
-      <p>It's illegal in the US. Try Mexico or Europe.</p>
+    <div id="under-18">
+      <h1>Sorry, you're too young to participate. </h1>
+
+      <p>You have better things to do anyway.....</p>
+      <p>Click <a href = "https://www.usa.gov/voter-registration-age-requirements">here</a> to learn more</p>
     </div>
   </div>
 </body>
